--- a/server/Config.ini
+++ b/server/Config.ini
@@ -1,6 +1,6 @@
 [GameConf]
 dwStopTimeOut=10000
-GameDirectory=C:\MIR2\server\
+GameDirectory=./
 HeroDBName=HeroDB
 GameName=热血传奇
 ExtIPaddr=127.0.0.1
