--- a/server/DBServer/dbsrc.ini
+++ b/server/DBServer/dbsrc.ini
@@ -2,7 +2,7 @@
 ServerName=热血传奇
 ServerAddr=127.0.0.1
 ServerPort=6000
-MapFile=C:\MIR2\server\Mir200\Envir\MapInfo.txt
+MapFile=../Mir200/Envir/MapInfo.txt
 ViewHackMsg=0
 DynamicIPMode=1
 GateAddr=127.0.0.1
@@ -28,11 +28,11 @@ Month1=0
 Month2=0
 Month3=0
 [DB]
-Dir=C:\MIR2\server\DBServer\FDB\
-IdDir=C:\MIR2\server\DBServer\FDB\
-HumDir=C:\MIR2\server\DBServer\FDB\
-FeeDir=C:\MIR2\server\DBServer\FDB\
-BackupDir=C:\MIR2\server\DBServer\Backup\
-ConnectDir=C:\MIR2\server\DBServer\Connection\
-LogDir=C:\MIR2\server\DBServer\Log\
-ClearLogDir=C:\MIR2\server\DBServer\ClearLog\
+Dir=./FDB/
+IdDir=./FDB/
+HumDir=./FDB/
+FeeDir=./FDB/
+BackupDir=./Backup/
+ConnectDir=./Connection/
+LogDir=./Log/
+ClearLogDir=./ClearLog/
