--- a/server/LoginSrv/Logsrv.ini
+++ b/server/LoginSrv/Logsrv.ini
@@ -13,10 +13,10 @@ DynamicIPMode=1
 AutoClear=0
 AutoClearTime=1000
 [DB]
-IdDir=C:\MIR2\server\LoginSrv\IDDB\
-FeedIDList=C:\MIR2\server\LoginSrv\FeedIDList.txt
-FeedIPList=C:\MIR2\server\LoginSrv\FeedIPList.txt
-CountLogDir=C:\MIR2\server\LoginSrv\CountLog\
-WebLogDir=C:\MIR2\server\LoginSrv\GameWFolder\
-ChrLogDir=C:\MIR2\server\LoginSrv\ChrLog\
-IdLogDir=C:\MIR2\server\LoginSrv\IdLog\
+IdDir=./IDDB/
+FeedIDList=./FeedIDList.txt
+FeedIPList=./FeedIPList.txt
+CountLogDir=./CountLog/
+WebLogDir=./GameWFolder/
+ChrLogDir=./ChrLog/
+IdLogDir=./IdLog/
