Update fpc options

--- a/source/LogDataServer/Makefile.fpc
+++ b/source/LogDataServer/Makefile.fpc
@@ -23,7 +23,7 @@ files= \
 [compiler]
 targetdir=.
 unittargetdir=./units/$(CPU_TARGET)-$(OS_TARGET)
-options=-Mobjfpc -Schi -O1 -g -gl -l -vewnhibq $(DBG_OPTIONS) -o$(TARGET_PROGRAMS)
+options=-Mobjfpc -Schi -O1 -g -glh -l -vewnhibq $(DBG_OPTIONS) -o$(TARGET_PROGRAMS)
 unitdir= \
 	$(FPCPKGDIR)/lcl/units/$(CPU_TARGET)-$(OS_TARGET) \
 	$(FPCPKGDIR)/lcl/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM) \
